# TR_PDF_Rename

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/workflows/: clippy.yml  codeql.yml  deploy.yml  devskim.yml  release.yml  rust-clippy.yml  rust.yml
src/: main.rs  parser.rs
