[package]
name = "TR_PDF_rename"
version = "0.2.7"
edition = "2024"
description = "Reads security transaction statements (as pdf) from neo-broker Trade Republic and renames them as transactiondate_ordertype_name."
readme = "README.md"
categories = ["command-line-utilities", "filesystem"]
keywords = ["cli", "rename", "TradeRepublic"]
homepage = "https://crates.io/crates/TR_PDF_rename"
documentation = "https://docs.rs/crate/TR_PDF_rename/latest"
repository = "https://github.com/ArdentEmpiricist/TR_PDF_Rename"
license = "MIT"

[dependencies]
walkdir = "2"
pdf-extract = "0.9"
regex = "1.11.2"
anyhow = "1"
chrono = "0.4"
isin = "0.1.19"
once_cell = "1.19"
